<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Checkbox_11</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="select">Select Fruit</string>
    <string name="apple">Apple</string>
    <string name="orange">Orange</string>
    <string name="Mango">Mango</string>
    <string name="submit">Submit</string>
</resources>
